ansible/roles/iptables/files/rules.v4
*mangle
:FORWARD DROP [0:0]
COMMIT

*nat
:INPUT DROP [0:0]
COMMIT

*filter
# OUTPUT chain policies
# define drop action for outgoing packets
-A OUTPUT -p tcp --dport 80 -j DROP

# define accept action for outgoing packets
-A OUTPUT -o lo -j ACCEPT

# FORWARD chain policies
# define drop action for forwarded packets
:FORWARD DROP [0:0]

# INPUT chain policies
# define drop action for incoming packets
:INPUT DROP [0:0]

# define logging action for incoming packets
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables_INPUT_denied: " --log-level 7

# define accept action for incoming packets
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p udp --dport 53 -j ACCEPT
-A INPUT -p tcp --dport 53 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --sport 2222 -j ACCEPT

# define reject action for incoming packets
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p icmp -j REJECT --reject-with icmp-host-unreachable 
COMMIT
